# TrakandReach

./: .gitignore  AGENTS.md  DOCUMENTATION.md  GO_INTEGRATION.md  GO_PORT_SPECS.md  INTEGRATION.md  README.md  Template.ts  go.mod  go.sum  pyproject.toml
cmd/trakand-reach/: main.go
examples/: multi_bot.py  precision_reply.py  puntswap_bot.py
pkg/api/: server.go  server_test.go  sessions_test.go
pkg/bridge/: bridge.go
pkg/db/: migration_test.go  repository.go  repository_test.go
pkg/engine/: manager.go  manager_test.go  throttle_test.go
pkg/filter/: filter.go  filter_test.go
pkg/img/: webp.go
pkg/models/: models.go
pkg/reach/: reach.go
src/trakand_reach/: __init__.py  _ws_compat.py  cli.py  engine.py  flask_ext.py
