[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trakand-reach"
version = "0.1.0"
authors = [
  { name = "Jules", email = "jules@example.com" },
]
description = "A Playwright orchestration engine for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "flask>=2.0.0",
    "websockets>=10.4",
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trakand-reach = "trakand_reach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
